Fix issue with background image overflowing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -59,6 +59,7 @@ body {
 
 .wrapper {
     position: relative;
+    overflow-x: hidden;
 }
 
 .climber {
